přidán první odstavec

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h2>TREFIL</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fuga accusamus nam doloremque cupiditate
+        deserunt rem nulla? Veritatis, placeat? Molestiae ipsum quas voluptatem nisi officiis suscipit possimus eveniet
+        fugit porro!</p>
 </body>
 </html>
